# informatica-2021-2022

./: .gitignore  CHANGELOG.md.save2  grupo 1 A&I.txt  informatica20212022.cabal.save1
3/: CHANGELOG.md  x3.cabal
3/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Examen parcial/: CHANGELOG.md  Examen-parcial.cabal  Grupo Diego y Jorge.txt
Examen parcial/app/: Main.hs
Grupo D-J/: Grupo Diego - Jorge.txt  Grupo Jorge-Diego.txt
Informatica I/Parciales/: Examen Parcial 2.txt
Informatica I/Resolucion 2ndo Parcial/: CHANGELOG.md  Resolucion-2ndo-Parcial.cabal
Informatica I/Resolucion 2ndo Parcial/app/: Main.hs
Informatica I/Resolucion Parciales/Resolucion Parcial 2 Jose Coronel Juan Estrada/: CHANGELOG.md  Resolucion-Parcial2-Jose-Coronel-Juan-Estrada.cabal
Informatica I/Resolucion Parciales/Resolucion Parcial 2 Jose Coronel Juan Estrada/app/: Main.hs
Informatica I/clases/01-09/: CHANGELOG.md  Main.hs  x0109.cabal
Informatica I/clases/04-08/: CHANGELOG.md  Main.hs  Readme.md  x0408.cabal
Informatica I/clases/10-08/: Main.hs
Informatica I/clases/14-09/: CHANGELOG.md  Main.hs  x1409.cabal
Informatica I/clases/17-08/: CHANGELOG.md  Main.hs  x1708.cabal
Informatica I/clases/18-08/: CHANGELOG.md  Main.hs  x1808.cabal
Informatica I/clases/24-08/: CHANGELOG.md  Main.hs  x2408.cabal
Informatica I/clases/25-08/: github.md
Reposicion de puntos Examen parcial/: Grupo Diego y Jorge.txt
Tarea 2/: CHANGELOG.md  Tarea2.cabal
Tarea 2/Tarea2/: Main.hs
(+312 files in other folders)
